--- a/public/web/src/app/views/common/header/header.html
+++ b/public/web/src/app/views/common/header/header.html
@@ -59,8 +59,34 @@
 			<div class="ask-button">
 				<img src="/web/img/askp.png" alt="">
 			</div>
-			<!-- 登录弹窗 -->
 			<div class="hide none">
+				<a href="#update-popup" id="update-popup">
+					<div class="update-popup">
+						<div class="update-reply-right">
+							<div class="header">
+								上传作品
+							</div>
+							<div class="update-image">
+								<!-- <i class="update-icon"></i> -->
+								<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160704-202424577a55788e8aa.png?imageView2/2/w/480" alt="">
+							</div>
+							<div class="footer">
+								<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160704-202424577a55788e8aa.png?imageView2/2/w/480" alt="">
+								<i class="ask-icon">原图</i>
+							</div>
+						</div>
+						<div class="update-content-left">
+							<div class="textarea-content">
+								<textarea name="" id="" placeholder="描述作品,让他更加有生命力"></textarea>
+								<i class="emoji-icon"></i>
+							</div>
+							<div class="footer-content">
+								<div class="update-btn">发布作品</div>
+							</div>
+						</div>
+					</div>
+				</a>
+			<!-- 登录弹窗 -->
 				<a href="#login-popup" id="login-popup">
 					<div class="login-popup">
 						<div class="left-login">
@@ -98,6 +124,7 @@
 						</div>
 					</div>
 				</a>
+				<!-- 注册弹窗 -->
 				<a href="#resgister-popup" id="resgister-popup">
 					<div class="resgister-popup">
 						<div class="left-login">
@@ -139,6 +166,7 @@
 						</div>
 					</div>
 				</a>
+				<!-- 绑定 -->
 				<a href="#Binding-popup" id="Binding-popup">
 					<div class="Binding-popup">
 						<div class="Bingding-title">
