--- a/public/web/src/app/views/detail/ask/ask.html
+++ b/public/web/src/app/views/detail/ask/ask.html
@@ -8,14 +8,14 @@
 			<div class="work-card">
 				<div class="header">
 					<div class="avatar">
-						<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+						<img src="<%= avatar %>" alt="">
 					</div>
 					<div class="user-message">
 						<div class="user-name">
-							名字
+							<%= nickname %>
 						</div>
 						<div class="time">
-							2015-5-5
+							<%= create_time %>
 						</div>
 					</div>
 					<div class="follow-btn">
@@ -23,10 +23,10 @@
 					</div>
 				</div>
 				<div class="content">
-					作品回答内容
+					<%= desc %>
 				</div>
 				<div class="work-img">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+					<img src="<%= image_url %>" alt="">
 				</div>
 				<div class="footer">
 					<div class="ask-btn">
@@ -34,7 +34,7 @@
 					</div>
 					<div class="comment">
 						<i class="comment-icon"></i>
-						66
+						<%= comment_count %>
 					</div>
 				</div>
 			</div>
@@ -43,38 +43,22 @@
 					<input type="text">
 					<div class="send-comment">评论</div>
 				</div>
-				<div class="comment-content clearfix">
-					<div class="comment-list clearfix">
-						<div class="comemnt-avatar">
-							<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-						</div>
-						<div class="commnet-meesage">
-							<div class="message clearfix">
-								<div class="name">name</div>
-								<div class="create-comment">time</div>
+				<% _.each(hot_comments, function(){ %>
+					<div class="comment-content clearfix">
+						<div class="comment-list clearfix">
+							<div class="comemnt-avatar">
+								<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
 							</div>
-						</div>
-						<div class="created-content">
-							内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容
+							<div class="commnet-meesage">
+								<div class="message clearfix">
+									<div class="name"><%= nickname %></div>
+									<div class="create-comment"><%= create_time %></div>
+								</div>
+							</div>
+							<div class="created-content"><%= content %></div>
 						</div>
 					</div>
-				</div>
-				<div class="comment-content clearfix">
-					<div class="comment-list clearfix">
-						<div class="comemnt-avatar">
-							<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-						</div>
-						<div class="commnet-meesage">
-							<div class="message clearfix">
-								<div class="name">name</div>
-								<div class="create-comment">time</div>
-							</div>
-						</div>
-						<div class="created-content">
-							内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容
-						</div>
-					</div>
-				</div>
+				<% }) %>
 			</div>
 		</div>
 	</div>
