--- a/public/web/src/app/views/detail/ask/ask.less
+++ b/public/web/src/app/views/detail/ask/ask.less
@@ -23,7 +23,7 @@
 			}
 		}
 		.work-content {
-		    margin-top: 25px;
+		    margin-top: 10px;
 		    border: 1px solid #d6d5da;
 			.work-card {
 			    width: 363px;
@@ -78,6 +78,8 @@
 				    padding-left: 10px;
 				}
 				.work-img {
+				    overflow: hidden;
+					height: 367px;
 					img {
 						width: 100%
 					}
