--- a/public/web/src/app/views/user/header/header.html
+++ b/public/web/src/app/views/user/header/header.html
@@ -16,16 +16,18 @@
 		</div>
 		<div class="header-nav clearfix">
 			<ul>
-				<li class="nav">动态</li>
-				<li class="nav select">求P</li>
-				<li class="nav">进行中</li>
-				<li class="nav">作品</li>
-				<li class="nav">喜欢</li>
+				<!-- <li data-type="dynamic" class="nav">动态</li> -->
+				<li data-type="ask" class="nav select">求P</li>
+				<li data-type="progress" class="nav ">进行中</li>
+				<li data-type="work" class="nav">作品</li>
+				<!-- <li data-type="like" class="nav">喜欢</li> -->
 			</ul>
+			<a href="#setting/setting">
 			<span class="setting">
 				<i class="setting-icon"></i>
 				设置
 			</span>
+			</a>
 		</div>
 	</div>
 </div>
