--- a/public/web/src/app/views/user/work/work.less
+++ b/public/web/src/app/views/user/work/work.less
@@ -1,11 +1,10 @@
-.user-work {
+#_askList {
 	background: #f5f5f5;
 	padding-top: 20px;
     min-height: 900px;
     .user-width {
 	    width: 1010px;
 	    margin: 0 auto 0;
-		.work-content {
 			.work-card {
 			    width: 275px;
 			    float: left;
@@ -87,6 +86,5 @@
 					}
 				}
 			}
-		}
 	}
 }
