--- a/public/web/src/less/common.less
+++ b/public/web/src/less/common.less
@@ -419,3 +419,114 @@ input::-webkit-input-placeholder {
         }
     }
 }
+.update-popup {
+    width: 680px;
+    .update-content-left {
+        width: 415px;
+        display: inline-block;
+        vertical-align: top;
+        height: 550px;
+        .footer-content {
+                position: relative;
+            .update-btn {
+                width: 110px;
+                height: 35px;
+                font-size: 14px;
+                background: #f9d160;
+                border-radius: 20px;
+                line-height: 35px;
+                color: #fff;
+                text-align: center;
+                float: right;
+                margin-right: 20px;
+            }
+        }
+        .textarea-content {
+            position: relative;
+            .emoji-icon {
+                position: absolute;
+                bottom: 10px;
+                left: 0px;
+                margin-left: 15px;
+                display: inline-block;
+                width: 30px;
+                height: 40px;
+                vertical-align: middle;
+                background: url('/web/img/emoji.png') no-repeat;
+                background-position: 5px 7px;
+                margin-right: 15px;
+
+            }
+            textarea {
+                padding: 50px 20px 20px;
+                font-size: 16px;
+                width: 90%;
+                height: 210px;
+                border-bottom: 1px solid #ebebeb;
+            }
+        }
+        .footer-content {
+            .update-btn {
+
+            }
+        }
+    }
+    .update-reply-right {
+        display: inline-block;
+        width: 265px;
+        .header {
+            height: 20px;
+            line-height: 20px;
+            font-size: 14px;
+            padding-left: 10px;
+            border-left: 5px solid #f9d160;
+            margin-left: 15px;
+            margin-top: 10px;
+            font-weight: 500;
+            color: #32303d;
+        }
+        .update-image {
+            width: 235px;
+            height: 235px;
+            line-height: 235px;
+            text-align: center;
+            margin: 15px;
+            overflow: hidden;
+            img {
+                width: 100%;
+            }
+        }
+        .update-icon {
+            background: url('/web/img/phot.png') no-repeat;
+            display: inline-block;
+            width: 45px;
+            height: 35px;
+            vertical-align: sub;
+        }
+        .footer {
+            position: relative;
+            height: 235px;
+            width: 235px;
+            overflow: hidden;
+            margin: 15px;
+            .ask-icon {
+                display: inline-block;
+                width: 35px;
+                height: 25px;
+                vertical-align: sub;
+                background: #f9d160;
+                border-radius: 20px 0px 0px 20px;
+                font-size: 12px;
+                line-height: 25px;
+                padding-left: 15px;
+                color: #fff;
+                position: absolute;
+                top: 10px;
+                right: 0px;
+            }
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
