--- a/public/web/src/app/views/detail/work/work.html
+++ b/public/web/src/app/views/detail/work/work.html
@@ -1,21 +1,17 @@
 <div class="detail-work clearfix">
 	<div class="ask-section clearfix">
-		<div class="nav">
-			<i class="kuso-icon"></i>
-			<span>作品</span>
-		</div>
 		<div class="work-content clearfix">
 			<div class="work-card">
 				<div class="header">
 					<div class="avatar">
-						<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+						<img class="imageLoad" data-original="<%= avatar %>" alt="">
 					</div>
 					<div class="user-message">
 						<div class="user-name">
-							名字
+							<%= nickname %>
 						</div>
 						<div class="time">
-							2015-5-5
+							<%= created_at %>
 						</div>
 					</div>
 					<div class="follow-btn">
@@ -23,10 +19,10 @@
 					</div>
 				</div>
 				<div class="content">
-					作品回答内容
+					<%= desc %>
 				</div>
 				<div class="work-img">
-					<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+					<img class="imageLoad" data-original="<%= image_url %>" alt="">
 				</div>
 				<div class="channel clearfix">
 					<i class="channel-icon"></i>
@@ -54,38 +50,24 @@
 					<input type="text">
 					<div class="send-comment">评论</div>
 				</div>
-				<div class="comment-content clearfix">
-					<div class="comment-list clearfix">
-						<div class="comemnt-avatar">
-							<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-						</div>
-						<div class="commnet-meesage">
-							<div class="message clearfix">
-								<div class="name">name</div>
-								<div class="create-comment">time</div>
+				<% _.each(comment,function(ct){ %>
+					<div class="comment-content clearfix">
+						<div class="comment-list clearfix">
+							<div class="comemnt-avatar">
+								<img class="imageLoad" data-original="<%= ct.avatar %>" alt="">
+							</div>
+							<div class="commnet-meesage">
+								<div class="message clearfix">
+									<div class="name"><%= ct.nickname %></div>
+									<div class="create-comment"><%= ct.create_time %></div>
+								</div>
+							</div>
+							<div class="created-content">
+								<%= ct.content %>
 							</div>
 						</div>
-						<div class="created-content">
-							内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容
-						</div>
 					</div>
-				</div>
-				<div class="comment-content clearfix">
-					<div class="comment-list clearfix">
-						<div class="comemnt-avatar">
-							<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-						</div>
-						<div class="commnet-meesage">
-							<div class="message clearfix">
-								<div class="name">name</div>
-								<div class="create-comment">time</div>
-							</div>
-						</div>
-						<div class="created-content">
-							内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容
-						</div>
-					</div>
-				</div>
+				<% }) %>
 			</div>
 		</div>
 	</div>
