--- a/public/web/src/app/views/detail/work/work.less
+++ b/public/web/src/app/views/detail/work/work.less
@@ -2,28 +2,12 @@
     width: 560px;
     margin: auto;
     margin-right: 10px;
+    margin-bottom: 10px;
 	.ask-section {
 		width: 447px;
 	    height: 50px;
-		.nav {
-		    font-size: 18px;
-		    background: #f5f5f5;
-			.kuso-icon {
-				    margin-left: 10px;
-				display: inline-block;
-			    width: 30px;
-			    height: 40px;
-			    vertical-align: middle;
-			    background: url('/web/img/p.png') no-repeat;
-				background-position: 5px 7px;
-				margin-right: 5px;
-			}
-			span {
-
-			}
-		}
 		.work-content {
-		    margin-top: 10px;
+		    margin-bottom: 50px;
 		    border: 1px solid #d6d5da;
 			.work-card {
 			    width: 447px;
@@ -33,7 +17,7 @@
 					line-height: 60px;
 					.user-message {
 					    float: left;
-					    width: 70px;
+					    width: 200px;
 					    height: 60px;
 					}
 					.avatar {
