--- a/public/web/src/app/views/detail/ask/ask.html
+++ b/public/web/src/app/views/detail/ask/ask.html
@@ -29,7 +29,7 @@
 					<img src="<%= image_url %>" alt="">
 				</div>
 				<div class="footer">
-					<div class="ask-btn">
+					<div class="ask-btn" data-id="<%= ask_id %>" data-type="<%= type %>">
 						<img src="/web/img/bangp_gray.png" alt="">
 					</div>
 					<div class="comment">
@@ -38,7 +38,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="comment-section clearfix">
+			<div class="comment-section clearfix none">
 				<div class="write-comment">
 					<input type="text">
 					<div class="send-comment">评论</div>
