--- a/public/web/src/app/views/detail/work/work.html
+++ b/public/web/src/app/views/detail/work/work.html
@@ -1,4 +1,4 @@
-<div class="detail-work clearfix">
+<div class="clearfix">
 	<div class="ask-section clearfix">
 		<div class="work-content clearfix">
 			<div class="work-card">
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="comment-section clearfix">
+			<div class="comment-section clearfix none">
 				<div class="write-comment">
 					<input type="text">
 					<div class="send-comment">评论</div>
