--- a/public/web/src/app/views/detail/workHeader/workHeader.less
+++ b/public/web/src/app/views/detail/workHeader/workHeader.less
@@ -1,8 +1,6 @@
 .detail-workHeader {
-    width: 560px;
-    margin: auto;
-    margin-right: 10px;
 	.ask-section {
+		float: right;
 		width: 447px;
 	    height: 50px;
 		.nav {
