--- a/public/web/src/app/views/detail/work/work.less
+++ b/public/web/src/app/views/detail/work/work.less
@@ -1,8 +1,6 @@
 .detail-work {
-    width: 560px;
-    margin: auto;
-    margin-right: 10px;
-    margin-bottom: 10px;
+	float: right;
+    margin-bottom: 50px;
 	.ask-section {
 		width: 447px;
 	    height: 50px;
@@ -62,6 +60,7 @@
 				    padding-left: 10px;
 				}
 				.work-img {
+				    height: 600px;
 					img {
 						width: 100%
 					}
