--- a/public/web/src/app/views/index/hot/hot.html
+++ b/public/web/src/app/views/index/hot/hot.html
@@ -1,6 +1,6 @@
 <div class="index-hot clearfix">
 	<section class="hot-content">
-		<a href="#/detail/detail/<%= id %>">
+		<a href="#/detail/ask/<%= id %>">
 			<li class="card-list">
 				<div class="image-block">
 					<i class="tag-icon">恶搞</i>
